# orgmin

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
orgmin/: __init__.py  _catalogue.py  _compute_database.py  _dev.py  _history.py  py.typed
