[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
version = '1.0.1'
requires-python = '>=3.9'
name = 'orgmin'
description = 'Organize numerical experiments'
readme = 'README.md'
dependencies = [
    'numpy',
]

[tool.setuptools.package-data]
"qplot" = ["py.typed"]
